@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-25
+2014-11-15 Mikhail S. Dubrovin	
+- GenericCalibPars.cpp - replace BASE::Size with BASE::size_base() (PSAS-67)
+
 Tag: V00-02-24
 2014-11-13 Mikhail S. Dubrovin	
 - CalibParsStore.h - extend conditional output prbits up to 255
